@@ -10,7 +10,9 @@
    * Changes to gems - nokogiri replaces 'hpricot'
    * Ruby updated to 2.1.6
    * Ruby gems updated to 2.4.7 plus updates to bigdecimal.. 
-   * byebug gem is included - requires starting shoes from console.
+   * byebug gem is included for remote debugging (a separate terminal or
+     console) and you need Ruby installed - NOT the Ruby inside Shoes. 
+     https://github.com/Shoes3/shoes3/wiki/Debugging-with-Byebug
    
 === Fixed with 3.2.23
 
